add simple mousedown/up effect

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   color: gold;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    cursor: none;
 }
 
 .cursor{
@@ -22,6 +23,12 @@ body {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  z-index: 1;
 }
 
 
